<resources>
    <string name="app_name">PecaPont</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégsem</string>
    <string name="phoneNumber">Telefonszám</string>
    <string name="address">Szállítási cím</string>
    <string name="seller">Eladó</string>
    <string name="buyer">Vásárló</string>
    <string name="product_description">Termék leírás</string>
    <string name="loginGuest">Látogató</string>
    <string name="loginGoogle">Google fiók használata</string>

    <string name="title_placeholder">Név</string>
    <string name="item_placeholder">Leírás</string>
    <string name="item_info_placeholder">Információk</string>
    <string name="search">Keresés</string>
    <string name="cart">Kosár</string>
    <string name="view">Nézet</string>
    <string name="settings">Beállítások</string>
    <string name="logout">Kijelentkezés</string>
    <string name="add_cart">Kosárba</string>
    <string name="delete">Töröl</string>
    <string name="update">Módosít</string>
    <string name="add">hozzáadás</string>
    <string name="add_item">Termék hozzáadása</string>
    <string name="item_price">Termék ára</string>
    <string name="item_desc">Termék leírása</string>
    <string name="item_name">Termék neve</string>

    <string-array name="shopping_item_names">
        <item>SERIE WALTER HYPERNOVA Horgászbot</item>
        <item>DAIWA REGAL W Orsó</item>
        <item>TUBERTINI GORILLA SINKING Zsinór</item>
        <item>PRESTON ELASTICATED FLAT METHOD Etetőkosár</item>
        <item>GURU SPEED BEAD Kapocs</item>
        <item>PRESTON REFLO Előke</item>
        <item>GAMAKATSU LS-2260 NSB A1-HARD Horog</item>
        <item>GURU BAIT BAYONETS csalitüske</item>
        <item>PROMIX COMPETITION WAFTER Csali</item>
        <item>SERIE WALTER Merev Botzsák</item>
    </string-array>

    <string-array name="shopping_item_desc">
        <item>SERIE WALTER HYPERNOVA horgászbot. Elérhető 330/360/390-es méretben.</item>
        <item>DAIWA REGAL W Orsó. Elérhető 3000 és 4000 méretben.</item>
        <item>TUBERTINI GORILLA SINKING. Elérhető méretek: 0.18, 0.20, 0.22, 0.24, 0.26.</item>
        <item>PRESTON ELASTICATED FLAT METHOD etetőkosár. Elérhető: S, L, XL méretekben és 20g, 30g, 40g, 50g kivitelben.</item>
        <item>GURU SPEED BEAD. 5db/csomag.</item>
        <item>PRESTON REFLO FLUOROCARBON előke. Elérhető méretek: 0.08, 0.10, 0.12, 0.14, 0.16, 0.18.</item>
        <item>GAMAKATSU LS-2260 NSB A1-HARD horog. Elérhető méretek: #12, #10, #8.</item>
        <item>GURU BAIT BAYONETS csalitüske. Elérhető méretek: 6mm, 8mm, 10mm.</item>
        <item>PROMIX COMPETITION WAFTER. Mangó izesítéssel.</item>
        <item>SERIE WALTER Merev Botzsák. Elérhető méretek: 140cm, 160cm, 180cm.</item>
    </string-array>

    <array name="shopping_item_rates">
        <item>4.5</item>
        <item>5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>4</item>
        <item>4.5</item>
        <item>4</item>
        <item>5</item>
        <item>4.5</item>
    </array>

    <array name="shopping_item_images">
        <item>@drawable/bot</item>
        <item>@drawable/orso</item>
        <item>@drawable/damil</item>
        <item>@drawable/etetokosar</item>
        <item>@drawable/forgo</item>
        <item>@drawable/eloke</item>
        <item>@drawable/horog</item>
        <item>@drawable/csalituske</item>
        <item>@drawable/csali</item>
        <item>@drawable/botzsak</item>
    </array>

    <array name="shopping_item_price">
        <item>39 990 Ft</item>
        <item>35 990 Ft</item>
        <item>4 490 Ft</item>
        <item>1 590 Ft</item>
        <item>1 990 Ft</item>
        <item>3 190 Ft</item>
        <item>1 590 Ft</item>
        <item>1 490 Ft</item>
        <item>1 990 Ft</item>
        <item>29 990 Ft</item>
    </array>
</resources>